// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`py#dynamodb agent-connection generator > should add dynamodb dev dependency to agent dev 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "metadata": {
    "components": [
      {
        "generator": "py#dynamodb#agent-connection",
        "name": "agent-db",
        "path": "packages/db",
      },
    ],
  },
  "name": "my-agent",
  "root": "packages/my-agent",
  "targets": {
    "agent-dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`py#dynamodb agent-connection generator > should use sourceComponent name when provided 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "metadata": {
    "components": [
      {
        "generator": "py#dynamodb#agent-connection",
        "name": "custom-agent-db",
        "path": "packages/db",
      },
    ],
  },
  "name": "my-agent",
  "root": "packages/my-agent",
  "targets": {
    "custom-agent-dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;
